--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -196,8 +196,8 @@ nav ul{
 	background-color: white;
 	box-shadow: 0 5px 5px #888888;
 	margin: 0 2px 15px;
-	transition: opacity: .4s ease-in-out;
-	column-break-inside: avoid;
+/*	transition: opacity: .4s ease-in-out;
+	column-break-inside: avoid;*/
 	display: inline-block;
 	width: 100%;
 	border-radius: 5px;
