updated app.css 2

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -230,7 +230,7 @@ nav ul{
 	text-align: center;
 }
 
-,{
+{
 	padding: 15px;
 	padding-bottom: 10px;
 	padding-top: 0px;
@@ -333,9 +333,6 @@ nav ul{
 	font-weight: bold;
 }
 
-.item-info {
-
-}
 /*general tags*/
 h1 {
 	text-align: center;
