--- a/app/views/pins/_search.html.erb
+++ b/app/views/pins/_search.html.erb
@@ -1,5 +1,6 @@
-<%= form_tag :controller => 'pins',:action => 'search', :method => 'get' do %>
-    <%= text_field_tag :search, params[:search], :id => 'search_field' %>
-    <%= submit_tag "Search", :name => nil %> 
+<%= form_tag("/search", method: "get") do %>
+ <label>Search</label>
+ <%= text_field_tag :search%>
+ <%= submit_tag "Search", :name => nil %> 
     <%= link_to "Clear", "$('search_field').clear()" %>
  <% end %>  
